--- a/DataEntry.html
+++ b/DataEntry.html
@@ -11,18 +11,38 @@
         <h1>Research Data Management System</h1>
         <div class="input-section">
             <label for="experimentName">Experiment Name:</label>
-            <input type="text" id="experimentName">
+            <input type="text" id="experimentName" placeholder="Enter experiment name...">
+            <span class="error-message" id="experimentNameError"></span>
 
             <label for="date">Date (YYYY-MM-DD):</label>
-            <input type="text" id="date">
+            <input type="text" id="date" placeholder="e.g., 2024-08-15">
+            <span class="error-message" id="dateError"></span>
 
             <label for="researcher">Researcher Name:</label>
-            <input type="text" id="researcher">
+            <input type="text" id="researcher" placeholder="Enter researcher's name...">
+            <span class="error-message" id="researcherError"></span>
 
             <label for="dataPoints">Data Points (comma-separated):</label>
-            <input type="text" id="dataPoints">
+            <input type="text" id="dataPoints" placeholder="e.g., 10, 20, 30">
+            <span class="error-message" id="dataPointsError"></span>
 
-            <button onclick="addEntry()">Add Entry</button>
+            <button class="btn" onclick="addEntry()">Add Entry</button>
+        </div>
+
+        <!-- Filters Section -->
+        <div class="filter-section">
+            <h3>Filters</h3>
+            <label for="filterExperimentName">Experiment Name:</label>
+            <input type="text" id="filterExperimentName" oninput="applyFilters()">
+
+            <label for="filterStartDate">Start Date:</label>
+            <input type="date" id="filterStartDate" oninput="applyFilters()">
+
+            <label for="filterEndDate">End Date:</label>
+            <input type="date" id="filterEndDate" oninput="applyFilters()">
+
+            <label for="filterResearcher">Researcher Name:</label>
+            <input type="text" id="filterResearcher" oninput="applyFilters()">
         </div>
 
         <div class="entries-section">
@@ -30,7 +50,7 @@
         </div>
 
         <div class="buttons">
-            <button onclick="exportToCSV()">Export to CSV</button>
+            <button class="btn" onclick="exportToCSV()">Export to CSV</button>
         </div>
     </div>
 
@@ -39,7 +59,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal()">&times;</span>
             <div id="modalContent"></div>
-            <button id="modalCloseButton" onclick="closeModal()">Close</button>
+            <button class="btn" onclick="closeModal()">Close</button>
         </div>
     </div>
 
